--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel-admin-ext/helpers": "^2.0",
+        "laravel-admin-ext/php-editor": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0"
     },
